# docmind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DocMind_AGI全栈开发大作业报告.docx  DocMind_项目汇报.pptx  Dockerfile  alembic.ini  pyproject.toml  start.bat  stop.bat
.github/workflows/: ci.yml
alembic/: env.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  start.sh
docs/: DocMind_项目报告.md
frontend/: README.md  angular.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.html  main.tsx  styles.scss
scripts/: generate_report.py
scripts/pptx/: generate_pptx.cjs  package-lock.json  package.json
src/: config.py  main.py
src/ai/: chunker.py  cleaner.py  deepseek_client.py  ocr.py  pdf_generator.py  pipeline.py  prompts.py  semantic_search.py  standardizer.py
src/api/: deps.py
src/core/: cache.py  celery_app.py  encryption.py  events.py  logging.py  security.py  storage.py
src/models/: __init__.py  base.py  collaboration.py  document.py  document_version.py  oauth.py  operation_log.py  tier.py  user.py
src/schemas/: auth.py  collaboration.py  common.py  document.py  oauth.py  processing.py  user.py  version.py
src/services/: achievement_service.py  ai_service.py  auth_service.py  collaboration_service.py  document_service.py  github_service.py  oauth_service.py  ocr_service.py  operation_log_service.py  pandoc_service.py  parsing_service.py  pdf_export_service.py  pptx_pandoc_render.py  pptx_render_service.py  pptx_slide_service.py  (+4 more)
tests/: conftest.py
(+115 files in other folders)
