[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmind"
version = "0.1.0"
description = "Full-Scenario Intelligent Document Processing Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncmy>=0.2.9",
    "mysqlclient>=2.2",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis[hiredis]>=5.2",
    "celery[redis]>=5.4",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "cachetools>=5.5",
    "orjson>=3.10",
    "minio>=7.2",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "pypdf>=5.1",
    "pdfplumber>=0.11",
    "markdown>=3.7",
    "chardet>=5.2",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "websockets>=14.1",
    "typer>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35",
    "httpx-ws>=0.7",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
